@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20080525.ebuild,v 1.1 2008/05/25 23:49:40 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20080525.ebuild,v 1.2 2009/07/22 13:12:30 pebenito Exp $
 
 IUSE=""
 
@@ -12,4 +12,4 @@ RDEPEND="sec-policy/selinux-dbus"
 
 DESCRIPTION="SELinux policy for desktops"
 
-KEYWORDS="~alpha ~amd64 ~mips ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~x86"
