@@ -1,6 +1,11 @@
 # ChangeLog for sec-policy/selinux-hal
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.7 2008/05/25 23:49:40 pebenito Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.8 2009/07/22 13:12:30 pebenito Exp $
+
+  18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
+  selinux-hal-20070329.ebuild, selinux-hal-20070928.ebuild,
+  selinux-hal-20080525.ebuild:
+  Drop alpha, mips, ppc, sparc selinux support.
 
 *selinux-hal-20080525 (25 May 2008)
 
